erDiagram
    Roles ||--o{ Users : AssignedTo
    Departments ||--o{ Users : Contains
    Users ||--o{ Tickets : Creates
    Users ||--o{ Tickets : AssignedTo
    SupportTeams ||--o{ TeamMembers : Has
    Users ||--o{ TeamMembers : Joins
    SupportTeams ||--o{ Categories : Routes
    Categories ||--o{ Tickets : Classifies
    Priorities ||--o{ Tickets : Prioritizes
    Statuses ||--o{ Tickets : Tracks
    SupportTeams ||--o{ Tickets : Owns
    Tickets ||--o{ TicketAssignmentHistory : Records
    SupportTeams ||--o{ TicketAssignmentHistory : AssignedTeam
    Users ||--o{ TicketAssignmentHistory : AssignedAgent
    Tickets ||--o{ TicketComments : Has
    Users ||--o{ TicketComments : Writes
    Tickets ||--o{ TicketAttachments : Has
    Users ||--o{ TicketAttachments : Uploads
    Users ||--o{ Notifications : Receives
    Tickets ||--o{ Notifications : Triggers
    Categories ||--o{ KnowledgeBaseArticles : Groups
    Users ||--o{ KnowledgeBaseArticles : Authors
    Tickets ||--o{ AISuggestions : Receives
    Categories ||--o{ AISuggestions : SuggestedCategory
    Priorities ||--o{ AISuggestions : SuggestedPriority
    Tickets ||--o{ ActivityLogs : Records
    Users ||--o{ ActivityLogs : Performs

    Roles {
        uuid Id PK
        varchar Name
        text Description
        timestamptz CreatedAt
    }

    Departments {
        uuid Id PK
        varchar Name
        text Description
        timestamptz CreatedAt
    }

    Users {
        uuid Id PK
        uuid RoleId FK
        uuid DepartmentId FK
        varchar FullName
        varchar Email
        varchar PasswordHash
        varchar Phone
        varchar JobTitle
        boolean IsActive
        timestamptz LastLoginAt
        timestamptz CreatedAt
        timestamptz UpdatedAt
    }

    SupportTeams {
        uuid Id PK
        varchar Name
        text Description
        timestamptz CreatedAt
    }

    TeamMembers {
        uuid TeamId PK,FK
        uuid UserId PK,FK
        varchar MemberRole
        timestamptz CreatedAt
    }

    Categories {
        uuid Id PK
        uuid DefaultTeamId FK
        varchar Name
        text Description
        boolean IsActive
        timestamptz CreatedAt
    }

    Priorities {
        uuid Id PK
        varchar Name
        int SortOrder
        int ResponseTargetHours
        boolean IsActive
    }

    Statuses {
        uuid Id PK
        varchar Name
        int SortOrder
        boolean IsTerminal
        boolean IsActive
    }

    Tickets {
        uuid Id PK
        bigint TicketNumber
        uuid RequesterId FK
        uuid CategoryId FK
        uuid PriorityId FK
        uuid StatusId FK
        uuid AssignedTeamId FK
        uuid AssignedToUserId FK
        varchar Title
        text Description
        text CancellationReason
        timestamptz DueAt
        timestamptz ResolvedAt
        timestamptz ClosedAt
        timestamptz CreatedAt
        timestamptz UpdatedAt
    }

    TicketAssignmentHistory {
        uuid Id PK
        uuid TicketId FK
        uuid AssignedTeamId FK
        uuid AssignedToUserId FK
        uuid AssignedByUserId FK
        text Note
        timestamptz CreatedAt
    }

    TicketComments {
        uuid Id PK
        uuid TicketId FK
        uuid AuthorId FK
        text Body
        boolean IsInternal
        timestamptz CreatedAt
    }

    TicketAttachments {
        uuid Id PK
        uuid TicketId FK
        uuid UploadedByUserId FK
        varchar FileName
        text FileUrl
        varchar ContentType
        bigint FileSizeBytes
        timestamptz CreatedAt
    }

    Notifications {
        uuid Id PK
        uuid UserId FK
        uuid TicketId FK
        varchar Title
        text Message
        boolean IsRead
        timestamptz CreatedAt
        timestamptz ReadAt
    }

    KnowledgeBaseArticles {
        uuid Id PK
        uuid CategoryId FK
        uuid AuthorId FK
        varchar Title
        text Content
        boolean IsPublished
        timestamptz CreatedAt
        timestamptz UpdatedAt
    }

    AISuggestions {
        uuid Id PK
        uuid TicketId FK
        uuid SuggestedCategoryId FK
        uuid SuggestedPriorityId FK
        text SuggestedReply
        numeric ConfidenceScore
        timestamptz CreatedAt
    }

    ActivityLogs {
        uuid Id PK
        uuid TicketId FK
        uuid ActorUserId FK
        varchar Action
        text OldValue
        text NewValue
        text Note
        timestamptz CreatedAt
    }

